Fixed carrot spacing of navbar. Also fixed alignment of home page section with font change

--- a/style.css
+++ b/style.css
@@ -10,10 +10,32 @@ body {
 
 }
 
+.navbar-nav .nav-link {
+  padding-right: 0;
+  padding-left: 5px;
+}
+
+.dropdown-toggle::after {
+  display: inline-block;
+  vertical-align: .255em;
+  margin-left:0px;
+  content: "";
+  border-top: .3em solid;
+  border-right: .3em solid transparent;
+  border-bottom: 0;
+  border-left: .3em solid transparent;
+}
+
 .navbar-brand
 {
   padding-top: 0;
   padding-bottom: 0;
+}
+
+.navbar
+{
+  padding-top: .25rem;
+  padding-bottom: .25rem;
 }
 
 .responsive
@@ -48,5 +70,36 @@ body {
     max-width:90%;
     margin-right:auto;
     margin-left:auto;
+  }
+}
+
+h1
+{
+  font-size:32px;
+}
+
+h3
+{
+  font-size:22px;
+}
+
+@media (min-width: 768px) {
+  
+  h1
+  {
+    font-size:50px;
+  }
+  h3
+  {
+    font-size:35px;
+  }
+
+  #namePlate
+  {
+    padding-right:0px;
+  }
+  #homePicture
+  {
+    padding-left:0px;
   }
 }
